# invoice-project

./: .env.name  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: secrets.toml
json/: invoice_Aaron Bergman_36259.json  invoice_Aaron Bergman_39519.json  invoice_Aaron Hawkins_6817.json
table/: invoices_extracted.csv
